# python-libipld

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  pyproject.toml  test.py
.github/workflows/: benchmark.yml  codspeed.yml  lint.yml  release.yml  test.yml
benchmark/: .gitignore  README.md  chart.py  conftest.py  requirements.txt  run.sh  test_decode.py  test_encode.py
data/: semi_torture_nested_lists.dagcbor  torture_cids.dagcbor
data/fixtures/bytes-long-8bit/: baguqeerabiuwx2krvxgwuufpkbrus3q7afzmqjofkqbfytqbnsgghzclwvwa.dag-json
data/fixtures/cid-bafkreifw7plhl6mofk6sfvhnfh64qmkq73oeqwl6sloru6rehaoujituke/: bafyreicsrmbdimdekusleiafgsuwpsvijhmqtecucyxysgcftnptepbb2m.dag-cbor
data/fixtures/cid-z8mWaJ1dZ9fH5EetPuRsj8jj26pXsgpsr/: bafyreiemoe3mh3uanvjypqyrousnwapnluxnmt5lorlhzguj5nvmgjdthi.dag-cbor
data/fixtures/int--11959030306112471732/: bafyreieir43khjzemsmgahaozab2vjvtdxavszixhhurvdqg2xkhrwinyi.dag-cbor
data/fixtures/string-𐅑/: baguqeerakloumxm3cyyspmsadsj7edgbvpgttahpjgcfpqxpliq4hryzrxgq.dag-json
profiling/: Cargo.toml
profiling/src/: main.rs
profiling/src/profiles/: decode_car.rs  decode_dag_cbor.rs  encode_dag_cbor.rs  mod.rs
pytests/: conftest.py  requirements.txt  test_cid.py  test_dag_cbor.py  test_decode_car.py  test_decode_dag_cbor_multi.py  test_multibase.py
python/libipld/: __init__.py  _libipld.pyi
src/: car.rs  cid.rs  convert.rs  dag_cbor.rs  error.rs  ffi.rs  io.rs  lib.rs  multibase.rs
src/cid/: de.rs  ser.rs
src/dag_cbor/: de.rs  ser.rs
src/ffi/: dict.rs  int.rs  key_cache.rs  recursion.rs  string.rs  sys.rs
src/io/: leb128.rs  reader.rs  writer.rs
src/multibase/: de.rs  ser.rs
