[package]
name = "libipld"
version = "3.3.1"
edition = "2021"
license = "MIT"
description = "Python binding to the Rust IPLD library"
authors = ["Ilya (Marshal) <ilya@marshal.dev>"]
keywords = ["ipld", "cid", "multibase", "multihash", "dag-cbor"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libipld"
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["generate-import-lib", "anyhow"] }
python3-dll-a = "0.2.14"
anyhow = "1.0.100"
cid = "0.11.1"
cbor4ii = { version = "1.2.1" }

[workspace]
members = [ "profiling" ]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
