[package]
name = "libipld"
version = "3.4.1"
edition = "2021"
license = "MIT"
description = "Python binding to the Rust IPLD library"
authors = ["Ilya (Marshal) <ilya@marshal.dev>"]
keywords = ["ipld", "cid", "multibase", "multihash", "dag-cbor"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libipld"
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["generate-import-lib", "anyhow"] }
python3-dll-a = "0.2.15"
anyhow = "1.0.102"
cid = "0.11.3"
ipld-core = "0.4"
cbor4ii = { version = "1.2.2" }

[build-dependencies]
pyo3-build-config = "0.28.3"

[workspace]
members = [ "profiling" ]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
