[project]
name = "libipld"
dynamic = ["version"]
description = "Python binding to the Rust IPLD library"
authors = [
    {name = "Ilya (Marshal)", email = "ilya@marshal.dev"}
]
license = "MIT"
repository = "https://github.com/MarshalX/python-libipld"
readme = "README.md"
keywords = ["library", "lib", "ipld", "cid", "multibase", "multihash", "dag", "cbor", "dag-cbor"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Pre-processors",
]

[project.urls]
"Homepage" = "https://github.com/MarshalX/python-libipld"
"Tracker" = "https://github.com/MarshalX/python-libipld/issues"
"Author" = "https://github.com/MarshalX"

[tool.pytest.ini_options]
addopts = [
    '--benchmark-columns', 'min,mean,stddev,outliers,rounds,iterations',
    '--benchmark-disable',  # use --benchmark-enable
]

[tool.maturin]
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"
