[project]
name = "libipld"
dynamic = ["version"]
description = "Python binding to the Rust IPLD library"
authors = [
    {name = "Ilya (Marshal)", email = "ilya@marshal.dev"}
]
license = "MIT"
readme = "README.md"
keywords = ["library", "lib", "ipld", "cid", "multibase", "multihash", "dag", "cbor", "dag-cbor"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Pre-processors",
]

[project.urls]
"Homepage" = "https://github.com/MarshalX/python-libipld"
"Repository" = "https://github.com/MarshalX/python-libipld"
"Tracker" = "https://github.com/MarshalX/python-libipld/issues"
"Author" = "https://github.com/MarshalX"

[dependency-groups]
dev = ["maturin>=1.8.7,<2.0"]
testing = [
    { include-group = "dev" },
    'pytest==8.3.5; python_version == "3.8"',
    'pytest==8.4.1; python_version >= "3.9"',
    'pytest-benchmark==4.0.0; python_version == "3.8"',
    'pytest-benchmark==5.1.0; python_version >= "3.9"',
    'pytest-xdist==3.6.1; python_version == "3.8"',
    'pytest-xdist==3.8.0; python_version >= "3.9"',
]
codspeed = [
    # only run on CI with the latest Python version
    'pytest-codspeed==4.1.1; python_version == "3.14" and implementation_name == "cpython"',
]

all = [
    { include-group = "dev" },
    { include-group = "testing" },
]

[tool.pytest.ini_options]
addopts = [
    '--benchmark-columns', 'min,mean,stddev,outliers,rounds,iterations',
    '--benchmark-disable',  # use --benchmark-enable
]

[tool.maturin]
python-source = "python"
module-name = "libipld._libipld"
bindings = "pyo3"
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.8.7,<2.0"]
build-backend = "maturin"
